[package]
name = "orka_framework"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
lazy_static = "1.4.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.70"
[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"
